sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: not found: value j
			if (plusPetit(j+1,j)) {
                                      ^AlgCocktailSort1:14: error: not found: value j
				echange(j,j+1)
                                        ^