sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
	var tri:Boolean = false
	while(!tri) {
		tri = true
		for (j<- getNombreValeurs-2 to 0 by-1) {
			if (plusPetit(j+1,j)) {
				echange(j,j+1)
				tri=false
			}
		}
		for (i<- 0 to getNombreValeurs-2) {
			if (plusPetit(j+1,j)) {
				echange(j,j+1)
				tri=false
			}
		}
	}
}
